src/dm/generator/antlr/SimpleHeaderParser.java
// Generated from SimpleHeader.g4 by ANTLR 4.5

package dm.generator.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleHeaderParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, LBRACE=12, RBRACE=13, LPAREN=14, RPAREN=15, LBRACKET=16, 
		RBRACKET=17, SEMICOLON=18, COMMA=19, STAR=20, CONST=21, UNSIGNED=22, NUMBER=23, 
		IDENTIFIER=24, LOGICALS=25, SINGLE_COMMENT=26, WS=27;
	public static final int
		RULE_expression = 0, RULE_type = 1, RULE_enum_specifier = 2, RULE_enum_entry = 3, 
		RULE_enum_value = 4, RULE_include = 5, RULE_typedef = 6, RULE_function_dec = 7, 
		RULE_param_list = 8, RULE_param = 9, RULE_parse = 10, RULE_parse_var = 11, 
		RULE_parse_var_out = 12, RULE_cond_parse_var = 13, RULE_condition = 14;
	public static final String[] ruleNames = {
		"expression", "type", "enum_specifier", "enum_entry", "enum_value", "include", 
		"typedef", "function_dec", "param_list", "param", "parse", "parse_var", 
		"parse_var_out", "cond_parse_var", "condition"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'enum'", "'='", "'#include'", "'#import'", "'<'", "'\"'", "'>'", 
		"'typedef'", "'?'", "'out'", "'if'", "'{'", "'}'", "'('", "')'", "'['", 
		"']'", "';'", "','", "'*'", "'const'", "'unsigned'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "SEMICOLON", 
		"COMMA", "STAR", "CONST", "UNSIGNED", "NUMBER", "IDENTIFIER", "LOGICALS", 
		"SINGLE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleHeader.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleHeaderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IncludeContext include() {
			return getRuleContext(IncludeContext.class,0);
		}
		public Enum_specifierContext enum_specifier() {
			return getRuleContext(Enum_specifierContext.class,0);
		}
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public Function_decContext function_dec() {
			return getRuleContext(Function_decContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimpleHeaderParser.EOF, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			setState(39);
			switch (_input.LA(1)) {
			case T__0:
			case T__2:
			case T__3:
			case T__7:
			case CONST:
			case UNSIGNED:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
					{
					setState(30);
					include();
					}
					break;
				case T__0:
					{
					setState(31);
					enum_specifier();
					}
					break;
				case T__7:
					{
					setState(32);
					typedef();
					}
					break;
				case CONST:
				case UNSIGNED:
				case IDENTIFIER:
					{
					setState(33);
					function_dec();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(36);
				expression();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public TerminalNode STAR() { return getToken(SimpleHeaderParser.STAR, 0); }
		public List<TerminalNode> UNSIGNED() { return getTokens(SimpleHeaderParser.UNSIGNED); }
		public TerminalNode UNSIGNED(int i) {
			return getToken(SimpleHeaderParser.UNSIGNED, i);
		}
		public TerminalNode CONST() { return getToken(SimpleHeaderParser.CONST, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(42);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(41);
					match(UNSIGNED);
					}
					break;
				}
				setState(45);
				_la = _input.LA(1);
				if (_la==CONST) {
					{
					setState(44);
					match(CONST);
					}
				}

				setState(48);
				_la = _input.LA(1);
				if (_la==UNSIGNED) {
					{
					setState(47);
					match(UNSIGNED);
					}
				}

				setState(50);
				match(IDENTIFIER);
				}
				break;
			case 2:
				{
				setState(52);
				_la = _input.LA(1);
				if (_la==UNSIGNED) {
					{
					setState(51);
					match(UNSIGNED);
					}
				}

				setState(54);
				match(IDENTIFIER);
				setState(56);
				_la = _input.LA(1);
				if (_la==CONST) {
					{
					setState(55);
					match(CONST);
					}
				}

				}
				break;
			}
			setState(61);
			_la = _input.LA(1);
			if (_la==STAR) {
				{
				setState(60);
				match(STAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_specifierContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(SimpleHeaderParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SimpleHeaderParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleHeaderParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public List<Enum_entryContext> enum_entry() {
			return getRuleContexts(Enum_entryContext.class);
		}
		public Enum_entryContext enum_entry(int i) {
			return getRuleContext(Enum_entryContext.class,i);
		}
		public Enum_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_specifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterEnum_specifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitEnum_specifier(this);
		}
	}

	public final Enum_specifierContext enum_specifier() throws RecognitionException {
		Enum_specifierContext _localctx = new Enum_specifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_enum_specifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__0);
			setState(65);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(64);
				match(IDENTIFIER);
				}
			}

			setState(67);
			match(LBRACE);
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				enum_entry();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(73);
			match(RBRACE);
			setState(74);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_entryContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public Enum_valueContext enum_value() {
			return getRuleContext(Enum_valueContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SimpleHeaderParser.COMMA, 0); }
		public Enum_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterEnum_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitEnum_entry(this);
		}
	}

	public final Enum_entryContext enum_entry() throws RecognitionException {
		Enum_entryContext _localctx = new Enum_entryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_enum_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(IDENTIFIER);
			setState(78);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(77);
				enum_value();
				}
			}

			setState(81);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(80);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_valueContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(SimpleHeaderParser.NUMBER, 0); }
		public Enum_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterEnum_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitEnum_value(this);
		}
	}

	public final Enum_valueContext enum_value() throws RecognitionException {
		Enum_valueContext _localctx = new Enum_valueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enum_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__1);
			setState(84);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_include);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(88);
			match(IDENTIFIER);
			setState(89);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SimpleHeaderParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SimpleHeaderParser.IDENTIFIER, i);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleHeaderParser.SEMICOLON, 0); }
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typedef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__7);
			setState(92);
			match(IDENTIFIER);
			setState(93);
			match(IDENTIFIER);
			setState(94);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_decContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(SimpleHeaderParser.LPAREN, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SimpleHeaderParser.RPAREN, 0); }
		public ParseContext parse() {
			return getRuleContext(ParseContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleHeaderParser.SEMICOLON, 0); }
		public Function_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterFunction_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitFunction_dec(this);
		}
	}

	public final Function_decContext function_dec() throws RecognitionException {
		Function_decContext _localctx = new Function_decContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			type();
			setState(97);
			match(IDENTIFIER);
			setState(98);
			match(LPAREN);
			setState(99);
			param_list();
			setState(100);
			match(RPAREN);
			setState(102);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(101);
				match(T__8);
				}
			}

			setState(106);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(104);
				parse();
				}
				break;
			case SEMICOLON:
				{
				setState(105);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleHeaderParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleHeaderParser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitParam_list(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << UNSIGNED) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(108);
				param();
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(109);
					match(COMMA);
					setState(110);
					param();
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SimpleHeaderParser.IDENTIFIER, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			type();
			setState(119);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(SimpleHeaderParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SimpleHeaderParser.RBRACE, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(SimpleHeaderParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SimpleHeaderParser.SEMICOLON, i);
		}
		public List<Parse_varContext> parse_var() {
			return getRuleContexts(Parse_varContext.class);
		}
		public Parse_varContext parse_var(int i) {
			return getRuleContext(Parse_varContext.class,i);
		}
		public List<Parse_var_outContext> parse_var_out() {
			return getRuleContexts(Parse_var_outContext.class);
		}
		public Parse_var_outContext parse_var_out(int i) {
			return getRuleContext(Parse_var_outContext.class,i);
		}
		public List<Cond_parse_varContext> cond_parse_var() {
			return getRuleContexts(Cond_parse_varContext.class);
		}
		public Cond_parse_varContext cond_parse_var(int i) {
			return getRuleContext(Cond_parse_varContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LBRACE);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(122);
					parse_var();
					}
					break;
				case T__9:
					{
					setState(123);
					parse_var_out();
					}
					break;
				case T__10:
					{
					setState(124);
					cond_parse_var();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(127);
				match(SEMICOLON);
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << IDENTIFIER))) != 0) );
			setState(133);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parse_varContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SimpleHeaderParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SimpleHeaderParser.IDENTIFIER, i);
		}
		public TerminalNode LPAREN() { return getToken(SimpleHeaderParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SimpleHeaderParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(SimpleHeaderParser.COMMA, 0); }
		public TerminalNode NUMBER() { return getToken(SimpleHeaderParser.NUMBER, 0); }
		public Parse_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterParse_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitParse_var(this);
		}
	}

	public final Parse_varContext parse_var() throws RecognitionException {
		Parse_varContext _localctx = new Parse_varContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parse_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			setState(136);
			match(LPAREN);
			setState(137);
			match(IDENTIFIER);
			setState(146);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(138);
				match(COMMA);
				setState(144);
				switch (_input.LA(1)) {
				case STAR:
				case IDENTIFIER:
					{
					{
					setState(140);
					_la = _input.LA(1);
					if (_la==STAR) {
						{
						setState(139);
						match(STAR);
						}
					}

					setState(142);
					match(IDENTIFIER);
					}
					}
					break;
				case NUMBER:
					{
					setState(143);
					match(NUMBER);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(148);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parse_var_outContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(SimpleHeaderParser.LPAREN, 0); }
		public Parse_varContext parse_var() {
			return getRuleContext(Parse_varContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SimpleHeaderParser.RPAREN, 0); }
		public Parse_var_outContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse_var_out; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).enterParse_var_out(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleHeaderListener ) ((SimpleHeaderListener)listener).exitParse_var_out(this);
		}
	}

	public final Parse_var_outContext parse_var_out() throws RecognitionException {
		Parse_var_outContext _localctx = new Parse_var_outContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parse_var_out);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__9);
			setState(151);
			match(LPAREN);
			setState(152);
			parse_var();
			setState(153);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
